--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 
 :root {
   --font: "Inter", sans-serif;
+  padding: 0.75rem;
   --primary-100: #f26cf9;
   --primary-90: #f589fa;
   --primary-50: #fcd3fe;
@@ -51,7 +52,7 @@
   --footer-background-color: var(--grey-20);
   --section-background-color: var(--grey-20);
   --border-color: var(--grey-40);
-  --separator-border-color: var(--grey-40);
+  --separator-border-color: var(--grey-30);
   --separator-background-color: var(--grey-10);
   --separator-text-color: var(--grey-60);
   --link-color: var(--secondary-110);
@@ -315,7 +316,7 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
   grid-template-areas: "nav" "main" "footer";
-  padding: 0.75rem;
+
   gap: 0.75rem;
   height: 100dvh;
 
@@ -323,8 +324,10 @@ body {
     grid-template-columns: 250px 1fr;
     grid-template-rows: auto 1fr auto;
     grid-template-areas: "nav header" "nav main" "nav footer";
+    
   }
-  @media (min-width: 2160px) {
+
+  @media (min-width: 3840px) {
     grid-template-columns: 80px 1fr;
     grid-template-rows: auto 1fr auto;
     grid-template-areas: "nav header" "nav main" "nav footer";
@@ -384,6 +387,7 @@ header {
   flex-direction: row;
   gap: 8px;
   align-items: center;
+  
 }
 
 .header-text-container .header-title-row span {
@@ -395,11 +399,13 @@ header {
   font-weight: var(--h4-weight-semibold);
   color: var(--headline-color);
   margin: 0;
+  line-height: 110%;
+  
 }
 
 .breadcrumb {
-  font-size: var(--body-14-size);
-  font-weight: var(--body-14-weight-medium);
+  font-size: var(--title-11-size);
+  font-weight: var(--title-11-weight-regular);
   color: var(--text-muted-color);
   margin-bottom: 0.25rem;
   display: flex;
@@ -413,6 +419,7 @@ header {
   color: var(--primary-100);
   text-decoration: none;
   padding: 2px 0px;
+  line-height: 124%;
 }
 
 .breadcrumb-link:hover {
@@ -425,6 +432,171 @@ main {
   background-color: var(--main-background-color);
   border-radius: 1rem;
   padding: 1.5rem;
+
+}
+
+.event-card{
+  max-width: 800px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+
+.event-details {
+  background-color: var(--background-color);
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+  padding: 1rem;
+}
+
+.event-header{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.event-header.text{
+  display: flex;
+  flex-direction: column;
+}
+
+.event-header.booking{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: .9375rem;
+  
+}
+
+.event-booking-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 16px;
+  background-color: var(--primary-100);
+  color: var(--button-primary-text-color);
+  border: none;
+  border-radius: 40px;
+  cursor: pointer;
+  gap: 4px;
+}
+
+.event-booking-button:hover {
+  background-color: var(--primary-90);
+  color: var(--button-primary-hover-text-color);
+
+}
+
+.event-booking-button a {
+  color: var(--button-primary-text-color);
+  text-decoration: none;
+  font-size: var(--btn-14-size);
+  font-weight: var(--btn-14-weight-medium);
+  line-height: 100%;
+}
+
+.event-booking-button span{
+  font-size: 16px;
+  font-weight: var(--btn-10-weight-medium);
+}
+
+.event-header.booking h6{
+  font-size: var(--h6-size );
+  font-weight: var(--h6-weight-semibold);
+  color: var(--primary-100);
+  margin: 0;
+}
+
+.eventprice{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.eventprice p {
+  font-size: var(--title-10-size);
+  font-weight: var(--title-10-weight-regular);
+  color: var(--grey-70);
+  margin: 0;
+  line-height: 130%;
+}
+
+.event-title{
+  font-size: var(--h4-size);
+  font-weight: var(--h4-weight-semibold);
+  color: var(--grey-100);
+  margin-bottom: 0.5rem;
+  line-height: 110%;
+  margin-top: 1.125rem;
+  
+}
+
+.event-date {
+  color: var(--grey-70);
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  margin-bottom: 0.4375rem;
+  font-size: var(--title-12-size);
+  font-weight: 400;
+  line-height: 130%;
+  
+}
+
+.event-date span {
+  font-size: 14px;
+  opacity: 0.5;
+}
+
+.event-location {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  color: var(--grey-70);
+  font-size: var(--title-12-size);
+  font-weight: 400;
+  line-height: 130%;
+}
+
+.event-location span {
+  font-size: 14px;
+  opacity: 0.5;
+}
+
+.event-divider {
+  width: 100%;
+  height: 1px;
+  border: 1px solid var(--separator-border-color);
+  margin: 16px 0;
+}
+
+.about-event {
+  font-size: var(--title-11-size);
+  font-weight: var(--title-11-weight-semibold);
+  color: var(--headline-color);
+  margin-bottom: 0.5rem;
+}
+
+.event-description {
+  font-size: var(--body-12-size);
+  font-weight: var(--body-12-weight-regular);
+  color: var(--grey-90);
+  line-height: 130%;
+}
+
+.event-image {
+  width: 100%;
+  height: auto;
+  max-width: 800px;
+  margin: 0 auto;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;;
+  display: block;
 }
 footer {
   grid-area: footer;
