--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
   --separator-text-color: var(--grey-60);
   --link-color: var(--secondary-110);
   --link-hover-color: var(--primary-90);
-  --card-background-color: var(--grey-10);
+  --card-background-color: var(--grey-20);
   --card-border-color: var(--grey-20);
   --button-background-color: transparent;
   --button-hover-background-color: transparent;
@@ -316,7 +316,6 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
   grid-template-areas: "nav" "main" "footer";
-
   gap: 0.75rem;
   height: 100dvh;
 
@@ -324,7 +323,6 @@ body {
     grid-template-columns: 250px 1fr;
     grid-template-rows: auto 1fr auto;
     grid-template-areas: "nav header" "nav main" "nav footer";
-    
   }
 
   @media (min-width: 3840px) {
@@ -387,7 +385,6 @@ header {
   flex-direction: row;
   gap: 8px;
   align-items: center;
-  
 }
 
 .header-text-container .header-title-row span {
@@ -400,7 +397,6 @@ header {
   color: var(--headline-color);
   margin: 0;
   line-height: 110%;
-  
 }
 
 .breadcrumb {
@@ -432,15 +428,16 @@ main {
   background-color: var(--main-background-color);
   border-radius: 1rem;
   padding: 1.5rem;
-
+  gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
 }
 
-.event-card{
+.event-card {
   max-width: 800px;
   margin: 0 auto;
   width: 100%;
 }
-
 
 .event-details {
   background-color: var(--background-color);
@@ -451,24 +448,23 @@ main {
   padding: 1rem;
 }
 
-.event-header{
+.event-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.event-header.text{
+.event-header.text {
   display: flex;
   flex-direction: column;
 }
 
-.event-header.booking{
+.event-header.booking {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: .9375rem;
-  
+  gap: 0.9375rem;
 }
 
 .event-booking-button {
@@ -487,7 +483,6 @@ main {
 .event-booking-button:hover {
   background-color: var(--primary-90);
   color: var(--button-primary-hover-text-color);
-
 }
 
 .event-booking-button a {
@@ -498,19 +493,19 @@ main {
   line-height: 100%;
 }
 
-.event-booking-button span{
+.event-booking-button span {
   font-size: 16px;
   font-weight: var(--btn-10-weight-medium);
 }
 
-.event-header.booking h6{
-  font-size: var(--h6-size );
+.event-header.booking h6 {
+  font-size: var(--h6-size);
   font-weight: var(--h6-weight-semibold);
   color: var(--primary-100);
   margin: 0;
 }
 
-.eventprice{
+.eventprice {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -524,14 +519,13 @@ main {
   line-height: 130%;
 }
 
-.event-title{
+.event-title {
   font-size: var(--h4-size);
   font-weight: var(--h4-weight-semibold);
   color: var(--grey-100);
   margin-bottom: 0.5rem;
   line-height: 110%;
   margin-top: 1.125rem;
-  
 }
 
 .event-date {
@@ -543,7 +537,6 @@ main {
   font-size: var(--title-12-size);
   font-weight: 400;
   line-height: 130%;
-  
 }
 
 .event-date span {
@@ -585,6 +578,10 @@ main {
   font-weight: var(--body-12-weight-regular);
   color: var(--grey-90);
   line-height: 130%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 0.5rem 1rem;
 }
 
 .event-image {
@@ -595,14 +592,125 @@ main {
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
   border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;;
+  border-bottom-right-radius: 0;
   display: block;
 }
+
+.event-packages-container {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 1rem;
+  background: var(--background-color);
+  border-radius: 16px;
+}
+
+.event-packages-container p {
+  font-size: var(--title-16-size);
+  font-weight: var(--title-16-weight-semibold);
+  color: var(--grey-100);
+  line-height: 120%;
+}
+
+.packages-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1rem;
+}
+
+.package-item {
+  background-color: var(--card-background-color);
+  border: 1px solid var(--card-border-color);
+  border-radius: 16px;
+  padding: 1rem;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.package-item span {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--grey-100);
+  color: var(--grey-80);
+  opacity: 0.4;
+}
+
+.package-item:hover {
+  background-color: var(--cool-grey-10);
+  border-color: var(--cool-grey-10);
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.package-item.selected {
+  background-color: var(--primary-100);
+  border-color: var(--primary-100);
+  color: var(--grey-10);
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.package-item.selected .package-price {
+  color: var(--grey-10) !important;
+}
+
+.package-item.selected .package-details p {
+  color: var(--grey-10);
+  opacity: 0.8;
+}
+
+.package-item.selected span.material-symbols-outlined {
+  color: var(--grey-10);
+  opacity: 0.5;
+}
+
+.package-item.selected .package-header p {
+  color: var(--grey-10);
+}
+
+.package-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.package-details {
+  display: flex;
+  flex-direction: row;
+  gap: 2.125rem;
+  width: 100%;
+}
+
+.package-details p {
+  font-size: var(--title-12-size);
+  font-weight: var(--title-12-weight-regular);
+  line-height: 130%;
+  color: var(--grey-80);
+  opacity: 1;
+}
+
+.package-price {
+  font-size: var(--title-16-size) !important;
+  font-weight: var(--title-16-weight-medium) !important;
+  color: var(--primary-100) !important;
+}
+
+.package-type {
+  display: flex;
+  gap: 4px;
+}
+
+.package-description {
+  display: flex;
+  gap: 4px;
+}
+
 footer {
   grid-area: footer;
   background-color: var(--footer-background-color);
   border-radius: 1rem;
-  padding: 1.5rem;
   padding: 1rem 1.5rem;
 }
 
