--- a/src/App.css
+++ b/src/App.css
@@ -323,6 +323,7 @@ body {
     grid-template-columns: 250px 1fr;
     grid-template-rows: auto 1fr auto;
     grid-template-areas: "nav header" "nav main" "nav footer";
+    
   }
 
   @media (min-width: 3840px) {
@@ -385,6 +386,7 @@ header {
   flex-direction: row;
   gap: 8px;
   align-items: center;
+  
 }
 
 .header-text-container .header-title-row span {
@@ -397,6 +399,7 @@ header {
   color: var(--headline-color);
   margin: 0;
   line-height: 110%;
+  
 }
 
 .breadcrumb {
@@ -433,11 +436,12 @@ main {
   flex-direction: column;
 }
 
-.event-card {
+.event-card{
   max-width: 800px;
   margin: 0 auto;
   width: 100%;
 }
+
 
 .event-details {
   background-color: var(--background-color);
@@ -448,23 +452,24 @@ main {
   padding: 1rem;
 }
 
-.event-header {
+.event-header{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.event-header.text {
+.event-header.text{
   display: flex;
   flex-direction: column;
 }
 
-.event-header.booking {
+.event-header.booking{
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 0.9375rem;
+  gap: .9375rem;
+  
 }
 
 .event-booking-button {
@@ -483,6 +488,7 @@ main {
 .event-booking-button:hover {
   background-color: var(--primary-90);
   color: var(--button-primary-hover-text-color);
+
 }
 
 .event-booking-button a {
@@ -493,19 +499,19 @@ main {
   line-height: 100%;
 }
 
-.event-booking-button span {
+.event-booking-button span{
   font-size: 16px;
   font-weight: var(--btn-10-weight-medium);
 }
 
-.event-header.booking h6 {
-  font-size: var(--h6-size);
+.event-header.booking h6{
+  font-size: var(--h6-size );
   font-weight: var(--h6-weight-semibold);
   color: var(--primary-100);
   margin: 0;
 }
 
-.eventprice {
+.eventprice{
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -519,13 +525,14 @@ main {
   line-height: 130%;
 }
 
-.event-title {
+.event-title{
   font-size: var(--h4-size);
   font-weight: var(--h4-weight-semibold);
   color: var(--grey-100);
   margin-bottom: 0.5rem;
   line-height: 110%;
   margin-top: 1.125rem;
+  
 }
 
 .event-date {
@@ -537,6 +544,7 @@ main {
   font-size: var(--title-12-size);
   font-weight: 400;
   line-height: 130%;
+  
 }
 
 .event-date span {
@@ -581,7 +589,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 0.5rem 1rem;
+  gap: 0.5rem 1.rem;
 }
 
 .event-image {
@@ -592,7 +600,7 @@ main {
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
   border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
+  border-bottom-right-radius: 0;;
   display: block;
 }
 
@@ -603,22 +611,23 @@ main {
   padding: 1rem;
   background: var(--background-color);
   border-radius: 16px;
+  
 }
 
-.event-packages-container p {
+.event-packages-container p{
   font-size: var(--title-16-size);
   font-weight: var(--title-16-weight-semibold);
   color: var(--grey-100);
   line-height: 120%;
 }
 
-.packages-list {
+.packages-list{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1rem;
 }
 
-.package-item {
+.package-item{
   background-color: var(--card-background-color);
   border: 1px solid var(--card-border-color);
   border-radius: 16px;
@@ -627,9 +636,10 @@ main {
   display: flex;
   flex-direction: column;
   cursor: pointer;
+
 }
 
-.package-item span {
+.package-item span{
   font-size: 14px;
   font-weight: 400;
   color: var(--grey-100);
@@ -668,7 +678,7 @@ main {
   color: var(--grey-10);
 }
 
-.package-header {
+.package-header{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -676,33 +686,39 @@ main {
   width: 100%;
 }
 
-.package-details {
+
+.package-header p{
+  margin: 0;
+}
+.package-details{
   display: flex;
   flex-direction: row;
   gap: 2.125rem;
   width: 100%;
 }
 
-.package-details p {
+.package-details p{
   font-size: var(--title-12-size);
   font-weight: var(--title-12-weight-regular);
   line-height: 130%;
   color: var(--grey-80);
   opacity: 1;
+  margin: 0;
 }
 
-.package-price {
+.package-price{
   font-size: var(--title-16-size) !important;
-  font-weight: var(--title-16-weight-medium) !important;
+font-weight: var(--title-16-weight-medium) !important;
   color: var(--primary-100) !important;
 }
 
-.package-type {
+.package-type{
   display: flex;
   gap: 4px;
+  
 }
 
-.package-description {
+.package-description{
   display: flex;
   gap: 4px;
 }
