--- a/src/App.css
+++ b/src/App.css
@@ -317,13 +317,12 @@ body {
   grid-template-rows: auto 1fr auto;
   grid-template-areas: "nav" "main" "footer";
   gap: 0.75rem;
-  height: 100dvh;
+  min-height: 100dvh;
 
   @media (min-width: 768px) {
     grid-template-columns: 250px 1fr;
     grid-template-rows: auto 1fr auto;
     grid-template-areas: "nav header" "nav main" "nav footer";
-    
   }
 
   @media (min-width: 3840px) {
@@ -386,7 +385,6 @@ header {
   flex-direction: row;
   gap: 8px;
   align-items: center;
-  
 }
 
 .header-text-container .header-title-row span {
@@ -399,7 +397,6 @@ header {
   color: var(--headline-color);
   margin: 0;
   line-height: 110%;
-  
 }
 
 .breadcrumb {
@@ -430,17 +427,18 @@ main {
   grid-area: main;
   background-color: var(--main-background-color);
   border-radius: 1rem;
-  padding: 1.5rem;
-  gap: 1.5rem;
   display: flex;
   flex-direction: column;
+gap: 1.5rem;
+  padding: 1rem;
 }
 
-.event-card{
-  max-width: 800px;
+.event-card {
+  max-width: 960px;
   margin: 0 auto;
   width: 100%;
 }
+
 
 
 .event-details {
@@ -452,24 +450,34 @@ main {
   padding: 1rem;
 }
 
-.event-header{
+.event-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
-.event-header.text{
+.event-header h4{
+  margin: 0;
+  margin-bottom: .375rem;
+}
+
+.event-header.text {
   display: flex;
   flex-direction: column;
 }
 
-.event-header.booking{
+.event-header p{
+  margin-top: .25rem;
+  margin-bottom: 0;
+}
+
+.event-header.booking {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: .9375rem;
-  
+  gap: 0.9375rem;
 }
 
 .event-booking-button {
@@ -488,7 +496,6 @@ main {
 .event-booking-button:hover {
   background-color: var(--primary-90);
   color: var(--button-primary-hover-text-color);
-
 }
 
 .event-booking-button a {
@@ -499,19 +506,19 @@ main {
   line-height: 100%;
 }
 
-.event-booking-button span{
+.event-booking-button span {
   font-size: 16px;
   font-weight: var(--btn-10-weight-medium);
 }
 
-.event-header.booking h6{
-  font-size: var(--h6-size );
+.event-header.booking h6 {
+  font-size: var(--h6-size);
   font-weight: var(--h6-weight-semibold);
   color: var(--primary-100);
   margin: 0;
 }
 
-.eventprice{
+.eventprice {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -525,14 +532,13 @@ main {
   line-height: 130%;
 }
 
-.event-title{
+.event-title {
   font-size: var(--h4-size);
   font-weight: var(--h4-weight-semibold);
   color: var(--grey-100);
   margin-bottom: 0.5rem;
   line-height: 110%;
   margin-top: 1.125rem;
-  
 }
 
 .event-date {
@@ -544,7 +550,6 @@ main {
   font-size: var(--title-12-size);
   font-weight: 400;
   line-height: 130%;
-  
 }
 
 .event-date span {
@@ -589,45 +594,43 @@ main {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 0.5rem 1.rem;
+  gap: 0.5rem 1rem;
 }
 
 .event-image {
   width: 100%;
   height: auto;
-  max-width: 800px;
+
   margin: 0 auto;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
   border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;;
+  border-bottom-right-radius: 0;
   display: block;
 }
 
 .event-packages-container {
   width: 100%;
-  max-width: 800px;
+  max-width: 960px;
   margin: 0 auto;
   padding: 1rem;
   background: var(--background-color);
   border-radius: 16px;
-  
 }
 
-.event-packages-container p{
+.event-packages-container p {
   font-size: var(--title-16-size);
   font-weight: var(--title-16-weight-semibold);
   color: var(--grey-100);
   line-height: 120%;
 }
 
-.packages-list{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 1rem;
+.packages-list {
+  columns: 2;
+  column-gap: 1rem;
 }
 
-.package-item{
+.package-item {
   background-color: var(--card-background-color);
   border: 1px solid var(--card-border-color);
   border-radius: 16px;
@@ -636,10 +639,11 @@ main {
   display: flex;
   flex-direction: column;
   cursor: pointer;
-
+  margin-bottom: 1rem;
+  gap: .625rem;
 }
 
-.package-item span{
+.package-item span {
   font-size: 14px;
   font-weight: 400;
   color: var(--grey-100);
@@ -678,7 +682,7 @@ main {
   color: var(--grey-10);
 }
 
-.package-header{
+.package-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -686,18 +690,20 @@ main {
   width: 100%;
 }
 
-
-.package-header p{
+.package-header p {
   margin: 0;
 }
-.package-details{
+
+
+.package-details {
   display: flex;
   flex-direction: row;
   gap: 2.125rem;
   width: 100%;
+  margin: 0;
 }
 
-.package-details p{
+.package-details p {
   font-size: var(--title-12-size);
   font-weight: var(--title-12-weight-regular);
   line-height: 130%;
@@ -706,19 +712,18 @@ main {
   margin: 0;
 }
 
-.package-price{
+.package-price {
   font-size: var(--title-16-size) !important;
-font-weight: var(--title-16-weight-medium) !important;
+  font-weight: var(--title-16-weight-medium) !important;
   color: var(--primary-100) !important;
 }
 
-.package-type{
+.package-type {
   display: flex;
   gap: 4px;
-  
 }
 
-.package-description{
+.package-description {
   display: flex;
   gap: 4px;
 }
