--- a/src/App.css
+++ b/src/App.css
@@ -433,6 +433,44 @@ main {
   padding: 1rem;
 }
 
+.search-bar-container{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.search-bar-form {
+  display: flex;
+  background-color: var(--background-color);
+  border-radius: 30px;
+  width: 237px;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0.5rem 0.75rem;
+}
+
+.search-bar-form input {
+  border: none;
+  display: flex;
+  align-items: center;
+  font-size: var(--body-12-size);
+  font-weight: var(--body-12-weight-regular);
+}
+
+.search-bar:focus {
+  outline: none;
+}
+
+.search-bar-form span {
+  font-size: 18px;
+  cursor: default;
+}
+
+.search-bar-form ::placeholder {
+  color: var(--grey-60);
+  font-size: var(--body-12-size);
+  font-weight: var(--body-12-weight-regular);
+}
+
 .event-card {
   max-width: 960px;
   margin: 0 auto;
@@ -727,15 +765,17 @@ main {
 
 #events {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  min-height: 100dvh;
+  grid-template-rows: repeat(auto-fit, minmax(270px, 1fr));
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  min-height: 0;
+  gap: 0.75rem;
 }
 
 #events a {
   display: flex;
   flex-direction: column;
   text-decoration: none;
+  width: 100%;
 }
 
 .event-image-container {
@@ -758,7 +798,7 @@ main {
   font-size: var(--title-11-size);
   font-weight: var(--title-11-weight-medium);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
-  cursor:default;
+  backdrop-filter: blur(4px);
 }
 
 #events .event-wrapper {
@@ -768,7 +808,9 @@ main {
   padding: 0.75rem;
   background: var(--background-color);
   border-radius: 16px;
-  max-width: 600px;
+  width: 100%;
+  height: 100%;
+  min-height: 150px;
 }
 
 #events .event-card {
