--- a/src/App.css
+++ b/src/App.css
@@ -324,6 +324,7 @@ body {
     grid-template-rows: auto 1fr auto;
     grid-template-areas: "nav header" "nav main" "nav footer";
   }
+
 }
 
 nav {
@@ -1096,8 +1097,11 @@ justify-content: space-between;
   background: var(--background-color);
   padding: 2rem;
   border-radius: 16px;
+  margin: 0 auto;
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
   box-shadow: 0 6px 24px 0 rgba(70, 50, 190, 0.06), 0 1.5px 5px 0 rgba(80, 70, 220, 0.02);
 }
 
@@ -1105,6 +1109,7 @@ justify-content: space-between;
   display: flex;
   flex-direction: column;
   gap: 5px;
+  max-width: 50rem;
 }
 
 .booking-form-field ::placeholder {
@@ -1129,6 +1134,13 @@ justify-content: space-between;
   outline: none;
 }
 
+.booking-submit-wrapper{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  max-width: 50rem;
+}
+
 
 .booking-submit {
   background: var(--primary-100);
@@ -1139,8 +1151,10 @@ justify-content: space-between;
   font-weight: 500;
   color: var(--button-primary-text-color);
   margin-top: 1.5625rem;
-  width: 100%;
-  height: 50px;
+  width: auto;
+  height: 60px;
+  max-width: 37.5rem;
+  min-width: 18.75rem;
 }
 
 .booking-submit:hover {
@@ -1162,6 +1176,7 @@ justify-content: space-between;
   justify-content: center;
   margin-top: 20px;
   color: var(--grey-90);
+  max-width: 50rem;
 }
 
 .secure-booking span{
@@ -1174,17 +1189,22 @@ justify-content: space-between;
   font-weight: var(--body-14-weight-regular);
 }
 
+.confirmed-package{
+display: flex;
+gap: 5px;
+align-items: center;
+}
+
+
 .booking-summary-card {
   background: var(--background-color);
   padding: 24px;
   border-radius: 16px;
-  position: relative;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
   padding-left: 1.875rem;
   padding-right: 1.875rem;
   height: fit-content;
   width: 100%;
+  max-width: 37.5rem;
   box-shadow: 0 6px 24px 0 rgba(70, 50, 190, 0.06), 0 1.5px 5px 0 rgba(80, 70, 220, 0.02);
 }
 
@@ -1206,18 +1226,7 @@ justify-content: space-between;
   padding-bottom: 1rem;
 }
 
-.booking-summary-details::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 5px;
-  width: 100%;
-  background: var(--primary-100);
-  border-top-left-radius: 16px;
-  border-top-right-radius: 16px;
-}
+
 
 .summary-event-image {
   width: 100%;
@@ -1266,7 +1275,7 @@ justify-content: space-between;
 }
 
 .vip-badge {
-  background: #f47fff;
+  background: var(--primary-100);
   color: #fff;
   border-radius: 16px;
   padding: 3px 12px 3px 8px;
@@ -1356,6 +1365,66 @@ justify-content: space-between;
 }
 
 
+.booking-confirmation-wrapper{
+  display: flex;
+  margin: 0 auto;
+  height: 100%;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.booking-confirmation-card{
+  background: var(--background-color);
+  border-radius: 16px;
+  box-shadow: 0 4px 32px 0 rgba(80, 70, 220, 0.08);
+  padding: 3rem 2.5rem 2.5rem 2.5rem;
+  width: 100%;
+}
+
+.booking-confirmation-card i{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.booking-confirmation-card h1, h3{
+  text-align: center;
+}
+
+.booking-confirmation-card h3{
+  margin-bottom: 3.125rem;
+}
+
+.confirmation-actions{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 2.5rem;
+  margin-bottom: .9375rem;
+}
+
+.confirmation-actions button{
+  border-radius: 40px;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--primary-100);
+  padding: 10px 16px;
+  color: var(--grey-10);
+  font-size: var(--btn-14-size-medium);
+  font-weight: var(--btn-14-weight-medium);
+  max-width: 15.625rem;
+  width: 100%;
+  height: 50px;
+}
+
+.confirmation-actions button:hover {
+  background-color: var(--primary-90);
+  color: var(--button-primary-hover-text-color);
+}
+
+
 footer {
   grid-area: footer;
   background-color: var(--footer-background-color);
@@ -1369,3 +1438,24 @@ footer small {
   color: var(--grey-70);
   line-height: 130%;
 }
+
+.error-message {
+  color: #f47fff;
+  font-size: 0.96rem;
+  font-weight: 500;
+  margin-top: 2px;
+  margin-bottom: 6px;
+  display: block;
+}
+
+.submit-error-message{
+  color: #f47fff;
+  background: #ffe7fa;
+  border-radius: 12px;
+  padding: 10px 14px;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  font-weight: 500;
+  text-align: left;
+}
+
